change docker para produção

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - organizer
         ports:
             - 3000:3000
-        command: npm run dev
+        command: npm start
 
 networks:
     organizer:
